Added common secrets

--- a/charmlib/src/charmlibs/seceng/secrets.yaml
+++ b/charmlib/src/charmlibs/seceng/secrets.yaml
@@ -1,16 +1,68 @@
-lp-credentials:
-  user: 'root'
-  group: 'deps-copy'
+customer-ppa-tracker:
+  user: 'uct-sync'
+  group: 'uct-sync'
   files:
-    - name: '/etc/deps-copy/lp-credentials'
-      permission: '0o640'
+    - name: '/etc/customer-ppa-tracker/passphrase'
+      permission: '0o400'
       variables:
-        CONSUMER_KEY: 'consumerkey'
-        ACCESS_TOKEN: 'accesstoken'
-        ACCESS_SECRET: 'accesssecret'
+        PASSPHRASE: 'passphrase'
       template: |
-        [1]
-        consumer_key = {CONSUMER_KEY}
-        consumer_secret =
-        access_token = {ACCESS_TOKEN}
-        access_secret = {ACCESS_SECRET}
+        {PASSPHRASE}
+    - name: '/etc/customer-ppa-tracker/id_rsa'
+      permission: '0o400'
+      variables:
+        PRIVATE: 'private'
+      template: |
+        {PRIVATE}
+    - name: '/etc/customer-ppa-tracker/id_rsa.pub'
+      permission: '0o666'
+      variables:
+        PUBLIC: 'public'
+      template: |
+        {PUBLIC}
+
+sct-sync:
+  user: 'sct-sync'
+  group: 'sct-sync'
+  files:
+    - name: '/etc/sct-sync/passphrase'
+      permission: '0o400'
+      variables:
+        PASSPHRASE: 'passphrase'
+      template: |
+        {PASSPHRASE}
+    - name: '/etc/sct-sync/id_rsa'
+      permission: '0o400'
+      variables:
+        PRIVATE: 'private'
+      template: |
+        {PRIVATE}
+    - name: '/etc/sct-sync/id_rsa.pub'
+      permission: '0o666'
+      variables:
+        PUBLIC: 'public'
+      template: |
+        {PUBLIC}
+
+notices-sync:
+  user: 'notices-sync'
+  group: 'notices-sync'
+  files:
+    - name: '/etc/notices-sync/passphrase'
+      permission: '0o400'
+      variables:
+        PASSPHRASE: 'passphrase'
+      template: |
+        {PASSPHRASE}
+    - name: '/etc/notices-sync/id_rsa'
+      permission: '0o400'
+      variables:
+        PRIVATE: 'private'
+      template: |
+        {PRIVATE}
+    - name: '/etc/notices-sync/id_rsa.pub'
+      permission: '0o666'
+      variables:
+        PUBLIC: 'public'
+      template: |
+        {PUBLIC}
