--- a/charmlib/pyproject.toml
+++ b/charmlib/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
     "ops>=2.19,<3",
+    "pydantic>= 2.4,<3"
 ]
 dynamic = ["version"]
 
@@ -57,6 +58,8 @@ log_cli_level = "INFO"
 line-length = 120
 lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
 lint.extend-ignore = [
+    "D101",
+    "D102",
     "D105",
     "D107",
     "D203",
@@ -77,7 +80,7 @@ lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
 format.quote-style = "preserve"
 
 [tool.ruff.lint.mccabe]
-max-complexity = 10
+max-complexity = 12
 
 [tool.codespell]
 skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
