Simplified secrets configuration by removing variables

--- a/charmlib/src/charmlibs/seceng/secrets.yaml
+++ b/charmlib/src/charmlibs/seceng/secrets.yaml
@@ -4,22 +4,16 @@ customer-ppa-tracker:
   files:
     - name: '/etc/customer-ppa-tracker!mode=755/passphrase'
       permission: '0o400'
-      variables:
-        PASSPHRASE: 'passphrase'
       template: |
-        {PASSPHRASE}
+        {passphrase}
     - name: '/etc/customer-ppa-tracker!mode=755/id_rsa'
       permission: '0o400'
-      variables:
-        PRIVATE: 'private'
       template: |
-        {PRIVATE}
+        {private}
     - name: '/etc/customer-ppa-tracker!mode=755/id_rsa.pub'
       permission: '0o644'
-      variables:
-        PUBLIC: 'public'
       template: |
-        {PUBLIC}
+        {public}
 
 sct-sync:
   user: 'sct-sync'
@@ -27,22 +21,16 @@ sct-sync:
   files:
     - name: '/etc/sct-sync!mode=755/passphrase'
       permission: '0o400'
-      variables:
-        PASSPHRASE: 'passphrase'
       template: |
-        {PASSPHRASE}
+        {passphrase}
     - name: '/etc/sct-sync!mode=755/id_rsa'
       permission: '0o400'
-      variables:
-        PRIVATE: 'private'
       template: |
-        {PRIVATE}
+        {private}
     - name: '/etc/sct-sync!mode=755/id_rsa.pub'
       permission: '0o644'
-      variables:
-        PUBLIC: 'public'
       template: |
-        {PUBLIC}
+        {public}
 
 notices-sync:
   user: 'notices-sync'
@@ -50,19 +38,13 @@ notices-sync:
   files:
     - name: '/etc/notices-sync!mode=755/passphrase'
       permission: '0o400'
-      variables:
-        PASSPHRASE: 'passphrase'
       template: |
-        {PASSPHRASE}
+        {passphrase}
     - name: '/etc/notices-sync!mode=755/id_rsa'
       permission: '0o400'
-      variables:
-        PRIVATE: 'private'
       template: |
-        {PRIVATE}
+        {private}
     - name: '/etc/notices-sync!mode=755/id_rsa.pub'
       permission: '0o644'
-      variables:
-        PUBLIC: 'public'
       template: |
-        {PUBLIC}
+        {public}
