Added ability for secure file creation to create intermediary directories

--- a/charmlib/src/charmlibs/seceng/secrets.yaml
+++ b/charmlib/src/charmlibs/seceng/secrets.yaml
@@ -2,20 +2,20 @@ customer-ppa-tracker:
   user: 'uct-sync'
   group: 'uct-sync'
   files:
-    - name: '/etc/customer-ppa-tracker/passphrase'
+    - name: '/etc/customer-ppa-tracker!mode=755/passphrase'
       permission: '0o400'
       variables:
         PASSPHRASE: 'passphrase'
       template: |
         {PASSPHRASE}
-    - name: '/etc/customer-ppa-tracker/id_rsa'
+    - name: '/etc/customer-ppa-tracker!mode=755/id_rsa'
       permission: '0o400'
       variables:
         PRIVATE: 'private'
       template: |
         {PRIVATE}
-    - name: '/etc/customer-ppa-tracker/id_rsa.pub'
-      permission: '0o666'
+    - name: '/etc/customer-ppa-tracker!mode=755/id_rsa.pub'
+      permission: '0o644'
       variables:
         PUBLIC: 'public'
       template: |
@@ -25,20 +25,20 @@ sct-sync:
   user: 'sct-sync'
   group: 'sct-sync'
   files:
-    - name: '/etc/sct-sync/passphrase'
+    - name: '/etc/sct-sync!mode=755/passphrase'
       permission: '0o400'
       variables:
         PASSPHRASE: 'passphrase'
       template: |
         {PASSPHRASE}
-    - name: '/etc/sct-sync/id_rsa'
+    - name: '/etc/sct-sync!mode=755/id_rsa'
       permission: '0o400'
       variables:
         PRIVATE: 'private'
       template: |
         {PRIVATE}
-    - name: '/etc/sct-sync/id_rsa.pub'
-      permission: '0o666'
+    - name: '/etc/sct-sync!mode=755/id_rsa.pub'
+      permission: '0o644'
       variables:
         PUBLIC: 'public'
       template: |
@@ -48,20 +48,20 @@ notices-sync:
   user: 'notices-sync'
   group: 'notices-sync'
   files:
-    - name: '/etc/notices-sync/passphrase'
+    - name: '/etc/notices-sync!mode=755/passphrase'
       permission: '0o400'
       variables:
         PASSPHRASE: 'passphrase'
       template: |
         {PASSPHRASE}
-    - name: '/etc/notices-sync/id_rsa'
+    - name: '/etc/notices-sync!mode=755/id_rsa'
       permission: '0o400'
       variables:
         PRIVATE: 'private'
       template: |
         {PRIVATE}
-    - name: '/etc/notices-sync/id_rsa.pub'
-      permission: '0o666'
+    - name: '/etc/notices-sync!mode=755/id_rsa.pub'
+      permission: '0o644'
       variables:
         PUBLIC: 'public'
       template: |
