--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: seceng-common
-Section: net
+Section: utils
 Priority: optional
 Maintainer: Paulo Flabiano Smorigo <pfsmorigo@canonical.com>
 Build-Depends:
