--- a/rsync-daemon/charm/charmcraft.yaml
+++ b/rsync-daemon/charm/charmcraft.yaml
@@ -33,3 +33,8 @@ config:
 provides:
   rsync-module:
     interface: rsync-module
+
+requires:
+  juju-info:
+    interface: juju-info
+    scope: container
