--- a/rsync-daemon/charm/requirements.txt
+++ b/rsync-daemon/charm/requirements.txt
@@ -6,7 +6,7 @@
 #
 annotated-types==0.7.0
     # via pydantic
-charmlibs-seceng @ git+https://github.com/canonical/seceng-common@add-rsync-daemon-charm#subdirectory=charmlib
+charmlibs-seceng @ git+https://github.com/canonical/seceng-common@main#subdirectory=charmlib
     # via canonical-seceng-rsync-daemon (pyproject.toml)
 importlib-metadata==8.7.1
     # via
